@@ -2,8 +2,9 @@
 Version 3.2.2.911 'Marshal West':
 	- memory management improvements;
 	- socket logging improvements;
-	- debug info added to CentOS and Fedora RPMs.
-	- TCP buffer size increased.
+	- debug info added to CentOS and Fedora RPMs;
+	- TCP traffic buffering improved;
+	- Thread barriers cleaned.
 	
 03/09/2014 Oleg Moskalenko <mom040267@gmail.com>
 Version 3.2.2.910 'Marshal West':
